// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`immutably adds items to state 1`] = `
<App>
  <div>
    <button
      id="immutable-add"
      onClick={[Function]}
    >
      Add item immutably (good)
    </button>
    <button
      id="mutable-add"
      onClick={[Function]}
    >
      Add item mutably (bad)
    </button>
    <ItemList
      items={Array []}
    >
      <ul />
    </ItemList>
  </div>
</App>
`;

exports[`immutably adds items to state 2`] = `
<App>
  <div>
    <button
      id="immutable-add"
      onClick={[Function]}
    >
      Add item immutably (good)
    </button>
    <button
      id="mutable-add"
      onClick={[Function]}
    >
      Add item mutably (bad)
    </button>
    <ItemList
      items={
        Array [
          Object {
            "id": 0,
            "value": 0,
          },
        ]
      }
    >
      <ul>
        <li>
          0
        </li>
      </ul>
    </ItemList>
  </div>
</App>
`;

exports[`immutably adds items to state 3`] = `
<App>
  <div>
    <button
      id="immutable-add"
      onClick={[Function]}
    >
      Add item immutably (good)
    </button>
    <button
      id="mutable-add"
      onClick={[Function]}
    >
      Add item mutably (bad)
    </button>
    <ItemList
      items={
        Array [
          Object {
            "id": 0,
            "value": 0,
          },
          Object {
            "id": 1,
            "value": 1,
          },
        ]
      }
    >
      <ul>
        <li>
          0
        </li>
        <li>
          1
        </li>
      </ul>
    </ItemList>
  </div>
</App>
`;

exports[`mutably adds items to state but does not re-render 1`] = `
<App>
  <div>
    <button
      id="immutable-add"
      onClick={[Function]}
    >
      Add item immutably (good)
    </button>
    <button
      id="mutable-add"
      onClick={[Function]}
    >
      Add item mutably (bad)
    </button>
    <ItemList
      items={Array []}
    >
      <ul />
    </ItemList>
  </div>
</App>
`;

exports[`mutably adds items to state but does not re-render 2`] = `
<App>
  <div>
    <button
      id="immutable-add"
      onClick={[Function]}
    >
      Add item immutably (good)
    </button>
    <button
      id="mutable-add"
      onClick={[Function]}
    >
      Add item mutably (bad)
    </button>
    <ItemList
      items={
        Array [
          Object {
            "id": 0,
            "value": 2,
          },
        ]
      }
    >
      <ul />
    </ItemList>
  </div>
</App>
`;

exports[`mutably adds items to state but does not re-render 3`] = `
<App>
  <div>
    <button
      id="immutable-add"
      onClick={[Function]}
    >
      Add item immutably (good)
    </button>
    <button
      id="mutable-add"
      onClick={[Function]}
    >
      Add item mutably (bad)
    </button>
    <ItemList
      items={
        Array [
          Object {
            "id": 0,
            "value": 2,
          },
          Object {
            "id": 1,
            "value": 3,
          },
        ]
      }
    >
      <ul />
    </ItemList>
  </div>
</App>
`;

exports[`renders after an immutable add 1`] = `
<App>
  <div>
    <button
      id="immutable-add"
      onClick={[Function]}
    >
      Add item immutably (good)
    </button>
    <button
      id="mutable-add"
      onClick={[Function]}
    >
      Add item mutably (bad)
    </button>
    <ItemList
      items={Array []}
    >
      <ul />
    </ItemList>
  </div>
</App>
`;
